# Blender_Randomiser

./: .gitignore  .pre-commit-config.yaml  Dev notes.md  README.md  add_array_objects_to_cursor.py  add_random_cube_in_volume.py  input_bounds.json  input_parameters.json  install_and_enable_addons.py  install_randomiser.sh  install_randomiser_rg.sh  main.py  notebook_operator_per_material.py  notebook_persist_props.py  notebook_root_node.py  notebook_subpanel_per_material.py  notebook_subpanels.py  notebook_subsubpanel.py  notebook_update_collection_sockets_1.py  notebook_update_collection_sockets_2.py  notebook_update_sockets_mwe.py  output_randomisations_per_frame1697093814.483426.json  output_randomisations_per_frame1697817657.502794_UD_example.json  pyproject.toml  randomisation_seed.sh  randomisation_seed_needs_inputs.sh  requirements-dev-conda.txt  requirements-dev-pip.txt  run_install_and_enable.sh  sample.blend  tox.ini  transform_geom_mat_test.json
blend_files/: colon_updated.blend  sample.blend
blender_randomiser/: __init__.py  add_random_cube_in_volume.py  install_and_enable_addons.py
doc/: Dev_notes.md  input_output.md  placeholder.md
docs/: Dev_notes.md  Install_addon_manually.md  Materials_geometry_panel.md  input_output.md  user_defined_panel.md
example_pipeline/: colon.yaml  find_bounding_box.ipynb  find_bounding_box_script.py  instructions.md  show_bbox.ipynb
input_files/: input_bounds_hackathon.json
labels/: docker_output_frame_seg1.txt  docker_output_frame_seg10.txt  docker_output_frame_seg2.txt  docker_output_frame_seg3.txt  docker_output_frame_seg4.txt  docker_output_frame_seg5.txt  docker_output_frame_seg6.txt  docker_output_frame_seg7.txt  docker_output_frame_seg8.txt  docker_output_frame_seg9.txt
output_files/: output_randomisations_per_frame1697116725.310647.json  output_randomisations_per_frame1697817956.010714_mat_geom_example.json
randomiser/: Import_min_max_inputs_geom_only_test_in_Blender.py  Import_min_max_inputs_mat_only_test_in_Blender.py  Test_int_min_max.py  __init__.py  config.py  (+8 more)
(+76 files in other folders)
